# ai-agent

./: .gitignore  LICENSE  README.md  call_function.py  main.py  pyproject.toml  tests.py
calculator/pkg/: calculator.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
