[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagent"
version = "0.1.0"
description = "A Python package for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==2.3.0",
    "python-dotenv==1.2.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["functions*"]
exclude = ["calculator*"]
namespaces = true
